<resources>
    <string name="app_name">Simple Notes</string>
    <string name="input_placeholder">Type something</string>
    <string name="title_placeholder">Title</string>
    <string name="replace">Replace</string>
    <string name="add_note">Add Note</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add_button">+</string>
    <string name="remove_button">X</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idExample">(e.g) any-format-is-good</string>
    <string name="apply">Apply</string>
    <string name="custom_id">Custom ID:</string>
    <string name="id_warning">ID can contain any character or number.\nNever share your ID with anyone if you want to keep your notes safe.\nChanging ID also causes you to lose current notes so be sure to remember important notes.\n\nCurrent ID:</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="new_category_name">New category</string>
    <string name="title">Naslov</string>
    <string name="content">Sadrzaj</string>
    <string name="sample">TestValue</string>
</resources>